fixed icon spacing

--- a/incident_viewer_demo/src/IspSelect/IspSelect.scss
+++ b/incident_viewer_demo/src/IspSelect/IspSelect.scss
@@ -28,6 +28,7 @@ $brand-primary:         #9bd2c7 !default;
       overflow: hidden;
       text-overflow: ellipsis;
       vertical-align: middle;
+      margin: 0 10px;
     }
 
     .isp-remove-control {
